# psv-register

./: .gitignore  Cargo.toml  flake.nix  frontend.nix  server.nix
.github/workflows/: build_container.yml
backend/: Cargo.toml  user_mail.tpl  user_mail_en.tpl
backend/migrations/2023-01-21-095329_init/: down.sql  up.sql
backend/migrations/2024-05-01-163544_target_face/: down.sql  up.sql
backend/src/: archer.rs  config.rs  db.rs  error.rs  main.rs  models.rs  schema.rs
common/: Cargo.toml
common/src/: archer.rs  bow_type.rs  class.rs  lib.rs  line_data.rs  locale.rs  target_face.rs
frontend/: Cargo.toml  index.html
frontend/locales/: app.yml
frontend/src/: archer.rs  lib.rs  main.rs  registrator.rs
frontend/static/: index.css
nix/: backend.nix  frontend.nix  module.nix  overlay.nix
