[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.1", features = ["macros"]}
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs"]}
tower = { version = "0.4.13", features = ["full"]}
lazy_static = "1.4"
email_address = "0.2.4"
common = { path = "../common" }
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"]}
serde = {version = "1.0", features = ["derive"]}
static_init = "1.0.3"
clap = { version = "4.1.1", features = ["derive"] }
handlebars = "4.3"
diesel = { version = "2.0.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0.0"
env_logger = "0.10"
log = "0.4"
figment = { version = "0.10.19", features = ["env", "toml"] }
